--- a/main/res/layout/activity_main.xml
+++ b/main/res/layout/activity_main.xml
@@ -1,18 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_marginTop="50px"
+    android:layout_marginBottom="200px"
+    android:background="#E7E8E2"
+    android:orientation="vertical"
+    tools:context="com.example.capstone2105inji.MainActivity">
 
-    <TextView
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_gravity="center"
+        android:layout_margin="30px"
+        android:background="@color/background_mint"
+        android:text="공릉동 철길A"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        app:backgroundTint="#E7E8E2" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        style="@style/Widget.AppCompat.Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@color/background_mint"
+        android:padding="0px"
+        android:paddingTop="0px"
+        android:paddingBottom="0px"
+        android:text="서울시 노원구 동일로184길 69-3"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="#6A6A6A"
+        android:textSize="16sp"
+        app:backgroundTint="#E7E8E2"
+        app:strokeColor="@color/background_kaki" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="10px"
+        android:layout_marginEnd="5px"
+        android:layout_marginRight="5px"
+        android:autoText="false"
+        android:background="@color/white"
+        android:bufferType="spannable"
+        android:hint="찾으시는 매장 또는 메뉴를 검색하세요."
+        android:padding="20px"
+        android:singleLine="false" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="20px"
+        android:background="#E7E8E2"
+        android:src="@drawable/food_icon"
+        android:text="음식점"
+        android:visibility="visible"
+        tools:visibility="visible" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="20px"
+        android:background="#E7E8E2"
+        android:src="@drawable/bar_icon"
+        android:text="주점" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="20px"
+        android:background="#E7E8E2"
+        android:src="@drawable/cafe_icon"
+        android:text="카페" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="20px"
+        android:background="#E7E8E2"
+        android:src="@drawable/dessert_icon"
+        android:text="디저트" />
+
+</LinearLayout>
